--- a/Packages/DensityTools/SConscript
+++ b/Packages/DensityTools/SConscript
@@ -47,7 +47,7 @@ clone.Prepend(CPPPATH='#/Packages/DensityTools')
 apps = 'gridinfo grid2ascii grid2xplor gridgauss gridscale gridslice gridmask blobid'
 apps += ' contained gridstat peakify pick_blob blob_stats water-inside water-extract'
 apps += ' water-hist water-count water-sides blob_contact griddiff near_blobs gridautoscale'
-apps += ' gridavg water-autocorrel'
+apps += ' gridavg water-autocorrel water-survival'
 
 list = []
 
