--- a/Packages/Convergence/SConscript
+++ b/Packages/Convergence/SConscript
@@ -35,7 +35,7 @@ scripts = 'bootstrap_overlap.pl effsize.pl'
 
 list = []
 apps = 'fidpick sortfids hierarchy neff block_average avgconv block_avgconv expfit'
-apps += ' cumehist'
+apps += ' chist'
 
 for name in Split(apps):
     fname = name + '.cpp'
