--- a/Packages/User/SConscript
+++ b/Packages/User/SConscript
@@ -28,7 +28,7 @@ Import('loos')
 clone = env.Clone()
 clone.Prepend(LIBS = [loos])
 
-apps = 'model_calc traj_calc simple_model_calc simple_model_transform traj_transform aggregate_list aggregator intracontacts findcontacts contacts_agg'
+apps = 'model_calc traj_calc simple_model_calc simple_model_transform traj_transform'
 
 # ***EDIT***
 # To use, add the base filename for your tools to the apps string
