Backporting r13777:13779 from release-2.2.0 tag into trunk
svn path=/software/LOOS/trunk/; revision=13780

--- a/Packages/OptimalMembraneGenerator/SConscript
+++ b/Packages/OptimalMembraneGenerator/SConscript
@@ -25,7 +25,7 @@ import os
 Import('env')
 PREFIX = env['PREFIX'] + '/OptimalMembraneGenerator/'
 
-executables = 'LipidLibrary.py NAMD.py OptimalMembraneGenerator.py ParseOptions.py PSFGen.py WaterBox.py'
+executables = 'LipidLibrary.py NAMD.py OptimalMembraneGenerator.py ParseOptions.py PSFGen.py WaterBox.py solvate.py'
 files = 'water_small.crd'
 dirs = 'doc example'
 
