Fixed bug not honoring pyloos=0 Added warning about not building pyloos and installing OMG
svn path=/software/LOOS/trunk/; revision=14304

--- a/Packages/OptimalMembraneGenerator/SConscript
+++ b/Packages/OptimalMembraneGenerator/SConscript
@@ -32,7 +32,7 @@ dirs = 'doc example'
 omg_package = []
 # Only install if pyloos is being built (i.e. pyloos=1 on command line)
 
-if env['pyloos']:
+if int(env['pyloos']):
     # Executables and dir have same perms, so group together...
 
     for f in Split(executables + ' ' + dirs):
