Removed deprecated pyloos code, correctly handles install of new PyLOOS

--- a/src/SConscript
+++ b/src/SConscript
@@ -92,13 +92,8 @@ if int(env['pyloos']):
       loos_python = pynv.SharedLibrary('_loos', ['loos.i', loos])
 
 # Handle installing PyLOOS
-   env.Install(os.path.join(PREFIX, 'lib'), File('loos.py'))      # Deprecated
-   env.Install(os.path.join(PREFIX, 'lib'), File('PyTraj.py'))    # Deprecated
    env.Install(os.path.join(PREFIX, 'lib'), loos_python)
-
-   env.Install(os.path.join(PREFIX, 'lib'), 'loos')
-
-   loos_python += Command("loos/__init__.py", "loos.py", Copy("$TARGET", "$SOURCE"))
+   loos_python += Command("#loos/__init__.py", "loos.py", Copy("$TARGET", "$SOURCE"))
 
 
 
