Using matrix now to bring in osx build

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,14 @@ branches:
 os:
   - linux
   - osx:
-    - osx_image: xcode8
 
 language: cpp
+
+matrix:
+  include:
+    - os: linux
+    - os: osx
+      osx_image: xcode8
 
 addons:
   apt:
