--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+language: cpp
+
+
 branches:
   only:
     - master
@@ -7,8 +10,6 @@ matrix:
     - os: linux
     - os: osx
       osx_image: xcode8
-
-language: cpp
 
 
 addons:
@@ -24,7 +25,7 @@ addons:
      - doxygen
      - graphviz
 
-before install:
+before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install boost; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install netcdf; fi
