--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ addons:
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install boost; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install netcdf; fi
+#  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install netcdf; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install swig; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install doxygen; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install graphviz; fi
