updated gitignore to skip lipid_liftime

--- a/.gitignore
+++ b/.gitignore
@@ -273,3 +273,133 @@ Packages/HydrogenBonds/hcorrelation
 Packages/HydrogenBonds/hcontacts
 Packages/HydrogenBonds/hmatrix
 Packages/HydrogenBonds/hbonds
+Tools/traj2pdb
+Tools/aligner
+Tools/residue-contact-map
+Tools/model-select
+Tools/xtcinfo
+Tools/trajinfo
+Tools/rmsf
+Tools/dibmops
+Tools/native_contacts
+Tools/reimage-by-molecule
+Tools/contact-time
+Tools/periodic_box
+Tools/area_per_lipid
+Tools/density-dist
+Tools/crossing-waters
+Tools/interdist
+Tools/kurskew
+Tools/traj2dcd
+Tools/clipper
+Tools/frame2pdb
+Tools/density-dist-windowed
+Tools/molshape
+Tools/svdcolmap
+Tools/membrane_map
+Tools/packing_score
+Tools/order_params
+Tools/cross-dist
+Tools/rmsd2ref
+Tools/center-molecule
+Tools/big-svd
+Tools/dumpmol
+Tools/coverlap
+Tools/fcontacts
+Tools/fixdcd
+Tools/averager
+Tools/exposure
+Tools/atomic-rdf
+Tools/smooth-traj
+Tools/model-meta-stats
+Tools/model2matlab
+Tools/helix_kink
+Tools/perturb-structure
+Tools/rotamer
+Tools/transition_contacts
+Tools/traj2matlab
+Tools/rmsfit
+Tools/bounding
+Tools/ramachandran
+Tools/recenter-trj
+Tools/svd
+Tools/rebond
+Tools/verap
+Tools/mops
+Tools/renum-pdb
+Tools/rmsds
+Tools/rgyr
+Tools/concat-selection
+Tools/torsion
+Tools/xy_rdf_timeseries
+Tools/xy_rdf
+Tools/paxes
+Tools/serialize-selection
+Tools/dcdinfo
+Tools/merge-traj
+Tools/subsetter
+Tools/phase-pdb
+Tools/drifter
+Tools/rdf
+Tools/lipid_lifetime
+Tools/contacts
+Tools/porcupine
+Tools/convert2pdb
+Packages/HydrogenBonds/hcontacts
+Packages/HydrogenBonds/hbonds
+Packages/HydrogenBonds/hcorrelation
+Packages/HydrogenBonds/hmatrix
+Packages/DensityTools/water-survival
+Packages/DensityTools/water-hist
+Packages/DensityTools/gridautoscale
+Packages/DensityTools/blob_stats
+Packages/DensityTools/grid2ascii
+Packages/DensityTools/griddiff
+Packages/DensityTools/blobid
+Packages/DensityTools/grid2xplor
+Packages/DensityTools/gridslice
+Packages/DensityTools/water-count
+Packages/DensityTools/gridavg
+Packages/DensityTools/contained
+Packages/DensityTools/gridscale
+Packages/DensityTools/water-extract
+Packages/DensityTools/pick_blob
+Packages/DensityTools/peakify
+Packages/DensityTools/gridgauss
+Packages/DensityTools/near_blobs
+Packages/DensityTools/gridinfo
+Packages/DensityTools/water-autocorrel
+Packages/DensityTools/blob_contact
+Packages/DensityTools/gridstat
+Packages/DensityTools/water-sides
+Packages/DensityTools/gridmask
+Packages/DensityTools/water-inside
+Packages/User/model_calc
+Packages/User/traj_calc
+Packages/User/simple_model_calc
+Packages/User/simple_model_transform
+Packages/User/traj_transform
+Packages/ElasticNetworks/enmovie
+Packages/ElasticNetworks/heavy-ca
+Packages/ElasticNetworks/vsa
+Packages/ElasticNetworks/gnm
+Packages/ElasticNetworks/psf-masses
+Packages/ElasticNetworks/eigenflucc
+Packages/ElasticNetworks/anm
+Packages/Convergence/hierarchy
+Packages/Convergence/boot_bcom
+Packages/Convergence/block_average
+Packages/Convergence/sortfids
+Packages/Convergence/assign_frames
+Packages/Convergence/avgconv
+Packages/Convergence/neff
+Packages/Convergence/block_avgconv
+Packages/Convergence/qcoscon
+Packages/Convergence/coscon
+Packages/Convergence/fidpick
+Packages/Convergence/expfit
+Packages/Convergence/rsv-coscon
+Packages/Convergence/ufidpick
+Packages/Convergence/decorr_time
+Packages/Convergence/bcom
+Packages/Convergence/chist
