--- a/src/SConscript
+++ b/src/SConscript
@@ -38,7 +38,7 @@ apps = apps + ' HBondDetector.cpp'
 apps = apps + ' Kernel.cpp KernelStack.cpp ProgressTriggers.cpp Selectors.cpp XForm.cpp amber_rst.cpp'
 apps = apps + ' xtc.cpp gro.cpp trr.cpp MatrixOps.cpp'
 apps = apps + ' charmm.cpp AtomicNumberDeducer.cpp OptionsFramework.cpp revision.cpp'
-apps = apps + ' utils_random.cpp utils_structural.cpp LineReader.cpp xtcwriter.cpp alignment.cpp' 
+apps = apps + ' utils_random.cpp utils_structural.cpp LineReader.cpp xtcwriter.cpp alignment.cpp MultiTraj.cpp' 
 
 if (env['HAS_NETCDF']):
    apps = apps + ' amber_netcdf.cpp'
@@ -70,7 +70,7 @@ hdr = hdr + ' grammar.hh location.hh position.hh stack.hh FlexLexer.h'
 hdr = hdr + ' xdr.hpp xtc.hpp gro.hpp trr.hpp exceptions.hpp MatrixOps.hpp sorting.hpp'
 hdr = hdr + ' Simplex.hpp charmm.hpp AtomicNumberDeducer.hpp OptionsFramework.hpp'
 hdr = hdr + ' utils_random.hpp utils_structural.hpp LineReader.hpp xtcwriter.hpp'
-hdr = hdr + ' trajwriter.hpp'
+hdr = hdr + ' trajwriter.hpp MultiTraj.hpp'
 
 if (env['HAS_NETCDF']):
    hdr = hdr + ' amber_netcdf.hpp'
