need to change octal notation to work in python3

--- a/Packages/PyLOOS/SConscript
+++ b/Packages/PyLOOS/SConscript
@@ -38,7 +38,7 @@ if env['pyloos']:
         Command(PREFIX + pyapp, pyapp,
                 [
                   Copy("$TARGET", "$SOURCE"),
-                  Chmod("$TARGET", 0755)
+                  Chmod("$TARGET", 0o755)
                 ]
                )
 
