--- a/Packages/Convergence/SConscript
+++ b/Packages/Convergence/SConscript
@@ -72,7 +72,7 @@ for file in Split(scripts):
     Command(PREFIX_BIN + file, file,
             [
             Copy("$TARGET", "$SOURCE"),
-            Chmod("$TARGET", 0755)
+            Chmod("$TARGET", 0o755)
             ])
 
 env.Alias('convergence_package', conv_tools)
