--- a/Packages/HydrogenBonds/SConscript
+++ b/Packages/HydrogenBonds/SConscript
@@ -55,7 +55,7 @@ for file in Split(scripts):
     Command(PREFIX_BIN + file, file,
             [
             Copy("$TARGET", "$SOURCE"),
-            Chmod("$TARGET", 0755)
+            Chmod("$TARGET", 0o755)
             ])
 
 
