I seem to have moved past the syntax errors and double defs. I am now getting linker errors.

--- a/Packages/Clustering/SConscript
+++ b/Packages/Clustering/SConscript
@@ -45,8 +45,8 @@ list = []
 
 ### Library generation
 # Be sure to add new modules/headers here!!!
-library_sources = 'Clustering.cpp HAC.cpp AverageLinkage.cpp KGS.cpp'
-library_headers = 'Clustering.hpp HAC.hpp AverageLinkage.hpp KGS.hpp'
+library_sources = 'ClusteringUtils.cpp HAC.cpp AverageLinkage.cpp KGS.cpp'
+library_headers = 'Clustering.hpp ClusteringUtils.hpp HAC.hpp AverageLinkage.hpp KGS.hpp'
 
 loos_clustering = clone.Library('loos_clustering', Split(library_sources))
 clone.Prepend(LIBS=['loos_clustering'])
