Needed to put non-template functions back in their source file. Builds now. No ERRORS!!!

--- a/Packages/Clustering/SConscript
+++ b/Packages/Clustering/SConscript
@@ -45,7 +45,7 @@ apps = 'cluster-kgs'
 
 ### Library generation
 # Be sure to add new modules/headers here!!!
-library_sources = 'HAC.cpp AverageLinkage.cpp KGS.cpp'
+library_sources = 'ClusteringUtils.cpp HAC.cpp AverageLinkage.cpp KGS.cpp'
 library_headers = 'Clustering.hpp ClusteringUtils.hpp HAC.hpp AverageLinkage.hpp KGS.hpp'
 
 loos_clustering = clone.Library('loos_clustering', Split(library_sources))
